--- a/school_management/i18n/fr_BE.po
+++ b/school_management/i18n/fr_BE.po
@@ -7,13 +7,16 @@ msgstr ""
 "Project-Id-Version: Odoo Server 16.0+e\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-23 09:49+0000\n"
-"PO-Revision-Date: 2023-04-23 09:49+0000\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"PO-Revision-Date: 2023-05-31 11:52+0000\n"
+"Last-Translator: Weblate Admin <weblate@ito-invest.lu>\n"
+"Language-Team: French (Belgium) <https://weblate.ito-invest.lu/projects/"
+"horizon-16-0/horizon-16-0-school_management/fr_BE/>\n"
+"Language: fr_BE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.17\n"
 
 #. module: school_management
 #: model:mail.template,body_html:school_management.email_template_report_individual_bloc
@@ -155,7 +158,7 @@ msgstr "Date d'abandon"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_needaction
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_needaction
 msgid "Action Needed"
-msgstr "A besoin d'une action"
+msgstr "Nécessite une action"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_course__active
@@ -163,7 +166,7 @@ msgstr "A besoin d'une action"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_bloc__active
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__active
 msgid "Active"
-msgstr "Actif"
+msgstr "En cours"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_individual_course__activity_ids
@@ -241,7 +244,7 @@ msgstr "Archivé"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_attachment_count
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_attachment_count
 msgid "Attachment Count"
-msgstr "Nombre de pièces jointes"
+msgstr "Nombre de fichiers attachés"
 
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.report_individual_bloc_content
@@ -251,7 +254,7 @@ msgstr ""
 #. module: school_management
 #: model:ir.model.fields.selection,name:school_management.selection__school_individual_program__state__awarded
 msgid "Awarded"
-msgstr "Diplômé"
+msgstr "Attribué"
 
 #. module: school_management
 #: model:ir.model.fields.selection,name:school_management.selection__school_bloc__level__1
@@ -520,7 +523,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_management.field_school_track__create_uid
 #: model:ir.model.fields,field_description:school_management.field_school_year__create_uid
 msgid "Created by"
-msgstr "Créé par"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__create_date
@@ -540,7 +543,7 @@ msgstr "Créé par"
 #: model:ir.model.fields,field_description:school_management.field_school_track__create_date
 #: model:ir.model.fields,field_description:school_management.field_school_year__create_date
 msgid "Created on"
-msgstr "Créé le"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_course__credits
@@ -764,7 +767,7 @@ msgstr "Femme"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_follower_ids
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_follower_ids
 msgid "Followers"
-msgstr "Abonnés"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__message_partner_ids
@@ -777,7 +780,7 @@ msgstr "Abonnés"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_partner_ids
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_partner_ids
 msgid "Followers (Partners)"
-msgstr "Abonnés (Partenaires)"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,help:school_management.field_school_individual_course__activity_type_icon
@@ -831,7 +834,7 @@ msgstr "Grouper par"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__has_message
 #: model:ir.model.fields,field_description:school_management.field_school_program__has_message
 msgid "Has Message"
-msgstr ""
+msgstr "Message"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_course__has_second_session
@@ -897,7 +900,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_management.field_school_track__id
 #: model:ir.model.fields,field_description:school_management.field_school_year__id
 msgid "ID"
-msgstr "Identifiant"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_individual_course__activity_exception_icon
@@ -925,7 +928,7 @@ msgstr ""
 #: model:ir.model.fields,help:school_management.field_school_individual_program__message_needaction
 #: model:ir.model.fields,help:school_management.field_school_program__message_needaction
 msgid "If checked, new messages require your attention."
-msgstr "si elle est cochée, de nouveaux messages requièrent votre attention."
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,help:school_management.field_school_bloc__message_has_error
@@ -1096,7 +1099,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_is_follower
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_is_follower
 msgid "Is Follower"
-msgstr "Est un abonné"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_individual_course_group__is_ghost_cg
@@ -1128,7 +1131,7 @@ msgstr "Année diplômante"
 #: model:ir.model.fields,field_description:school_management.field_school_track____last_update
 #: model:ir.model.fields,field_description:school_management.field_school_year____last_update
 msgid "Last Modified on"
-msgstr "Dernière modification le"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__write_uid
@@ -1148,7 +1151,7 @@ msgstr "Dernière modification le"
 #: model:ir.model.fields,field_description:school_management.field_school_track__write_uid
 #: model:ir.model.fields,field_description:school_management.field_school_year__write_uid
 msgid "Last Updated by"
-msgstr "Dernière mise à jour par"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__write_date
@@ -1168,7 +1171,7 @@ msgstr "Dernière mise à jour par"
 #: model:ir.model.fields,field_description:school_management.field_school_track__write_date
 #: model:ir.model.fields,field_description:school_management.field_school_year__write_date
 msgid "Last Updated on"
-msgstr "Dernière mise à jour le"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__level
@@ -1205,7 +1208,7 @@ msgstr "Adresse principale"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_main_attachment_id
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_main_attachment_id
 msgid "Main Attachment"
-msgstr "Pièce jointe principale"
+msgstr "Attachement principal"
 
 #. module: school_management
 #: model:ir.model.fields.selection,name:school_management.selection__school_student_report__gender__male
@@ -1405,7 +1408,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__message_needaction_counter
 #: model:ir.model.fields,field_description:school_management.field_school_program__message_needaction_counter
 msgid "Number of Actions"
-msgstr "Nombre d'Actions"
+msgstr "Nombre d'actions"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__message_has_error_counter
@@ -1431,7 +1434,7 @@ msgstr "Nombre d'erreurs"
 #: model:ir.model.fields,help:school_management.field_school_individual_program__message_needaction_counter
 #: model:ir.model.fields,help:school_management.field_school_program__message_needaction_counter
 msgid "Number of messages which requires an action"
-msgstr "Nombre de messages demandant une action"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,help:school_management.field_school_bloc__message_has_error_counter
@@ -1602,7 +1605,7 @@ msgstr "Année précédente"
 #: model_terms:ir.ui.view,arch_db:school_management.view_individual_course_tree
 #: model_terms:ir.ui.view,arch_db:school_management.view_program_tree
 msgid "Program"
-msgstr "Programme"
+msgstr "Cycle"
 
 #. module: school_management
 #: model:ir.model,name:school_management.model_school_program
@@ -1834,7 +1837,7 @@ msgstr "Séquence"
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.program_form
 msgid "Set to Draft"
-msgstr "Mettre en brouillon"
+msgstr "Remettre en brouillon"
 
 #. module: school_management
 #: model:ir.model.fields.selection,name:school_management.selection__school_cycle__type__short
@@ -1937,7 +1940,7 @@ msgstr "Specialités"
 #: model_terms:ir.ui.view,arch_db:school_management.view_individual_program_filter
 #: model_terms:ir.ui.view,arch_db:school_management.view_program_filter
 msgid "Speciality"
-msgstr "Spécialité"
+msgstr "Spécialités"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_res_partner__secondary_state_id
@@ -1950,7 +1953,7 @@ msgstr "État"
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__state
 #: model:ir.model.fields,field_description:school_management.field_school_program__state
 msgid "Status"
-msgstr "État"
+msgstr "Status"
 
 #. module: school_management
 #: model:ir.model.fields,help:school_management.field_school_individual_course__activity_state
@@ -2182,7 +2185,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_management.field_school_uid_mixin__uid
 #: model_terms:ir.ui.view,arch_db:school_management.view_individual_course_groups_filter
 msgid "UID"
-msgstr ""
+msgstr "UID"
 
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.individual_program_form
@@ -2235,7 +2238,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_management.field_school_individual_program__website_message_ids
 #: model:ir.model.fields,field_description:school_management.field_school_program__website_message_ids
 msgid "Website Messages"
-msgstr "Messages du site web"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,help:school_management.field_school_bloc__website_message_ids
@@ -2248,7 +2251,7 @@ msgstr "Messages du site web"
 #: model:ir.model.fields,help:school_management.field_school_individual_program__website_message_ids
 #: model:ir.model.fields,help:school_management.field_school_program__website_message_ids
 msgid "Website communication history"
-msgstr "Historique de communication du site web"
+msgstr ""
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_course__weight
@@ -2269,7 +2272,7 @@ msgstr "Poids"
 #: model:ir.model.fields,field_description:school_management.field_school_program__year_id
 #: model:ir.model.fields,field_description:school_management.field_school_student_report__year_id
 msgid "Year"
-msgstr "Année académique"
+msgstr "Année"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_res_partner__year_sequence
@@ -2282,7 +2285,7 @@ msgstr "Année académique"
 #: model:ir.model.fields,field_description:school_management.field_school_program__year_sequence
 #: model:ir.model.fields,field_description:school_management.field_school_year_sequence_mixin__year_sequence
 msgid "Year Sequence"
-msgstr "Séquence d'années"
+msgstr "Séquence d'année"
 
 #. module: school_management
 #: model_terms:ir.actions.act_window,help:school_management.action_archived_form
