--- a/school_prerequisits/i18n/fr_BE.po
+++ b/school_prerequisits/i18n/fr_BE.po
@@ -6,19 +6,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-21 20:39+0000\n"
-"PO-Revision-Date: 2024-02-21 20:39+0000\n"
+"POT-Creation-Date: 2024-02-21 16:46+0000\n"
+"PO-Revision-Date: 2024-02-21 16:54+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: fr_BE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__coriquisit_id
 msgid "Corequisit"
-msgstr ""
+msgstr "Corequis"
 
 #. module: school_prerequisits
 #: model:ir.actions.act_window,name:school_prerequisits.action_corequisit_list
@@ -27,7 +28,7 @@ msgstr ""
 #: model:ir.ui.menu,name:school_prerequisits.menu_corequisit_list
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.course_prerequisit_form
 msgid "Corequisits"
-msgstr ""
+msgstr "Corequis"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__course_id
@@ -35,71 +36,71 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_list
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_prerequisit_list
 msgid "Course Group"
-msgstr ""
+msgstr "Unité d'enseignement"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__name
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__name
 msgid "Course Group Name"
-msgstr ""
+msgstr "Nom de l'unité d'enseignement"
 
 #. module: school_prerequisits
 #: model:ir.model,name:school_prerequisits.model_school_course_group
 msgid "Courses Group"
-msgstr ""
+msgstr "Unité d'enseignement"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__create_uid
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Créé par"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__create_date
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Créé le"
 
 #. module: school_prerequisits
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_filter
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_prerequisit_filter
 msgid "Current Year"
-msgstr ""
+msgstr "Année en cours"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__display_name
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nom affiché"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__id
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__id
 msgid "ID"
-msgstr ""
+msgstr "Identifiant"
 
 #. module: school_prerequisits
 #: model:ir.model,name:school_prerequisits.model_school_individual_bloc
 msgid "Individual Bloc"
-msgstr ""
+msgstr "Bloc individuel"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit____last_update
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Dernière modification le"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__write_uid
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Dernière mise à jour par"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_corequisit__write_date
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Dernière mise à jour le"
 
 #. module: school_prerequisits
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_filter
@@ -116,12 +117,12 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_filter
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_prerequisit_filter
 msgid "Next Year"
-msgstr ""
+msgstr "Année prochaine"
 
 #. module: school_prerequisits
 #: model:ir.model.fields,field_description:school_prerequisits.field_school_prerequisit__preriquisit_id
 msgid "Prerequisit"
-msgstr ""
+msgstr "Prérequis"
 
 #. module: school_prerequisits
 #: model:ir.actions.act_window,name:school_prerequisits.action_prerequisit_list
@@ -130,23 +131,23 @@ msgstr ""
 #: model:ir.ui.menu,name:school_prerequisits.menu_prerequisit_list
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.course_prerequisit_form
 msgid "Prerequisits"
-msgstr ""
+msgstr "Prérequis"
 
 #. module: school_prerequisits
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_filter
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_prerequisit_filter
 msgid "Previous Year"
-msgstr ""
+msgstr "Année Précédente"
 
 #. module: school_prerequisits
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_filter
 msgid "Search Corequisit"
-msgstr ""
+msgstr "Chercher un corequis"
 
 #. module: school_prerequisits
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_prerequisit_filter
 msgid "Search Prerequisit"
-msgstr ""
+msgstr "Chercher un prérequis"
 
 #. module: school_prerequisits
 #: model_terms:ir.ui.view,arch_db:school_prerequisits.view_corequisit_filter
