--- a/school_program_approuval/i18n/fr_BE.po
+++ b/school_program_approuval/i18n/fr_BE.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-26 13:31+0000\n"
-"PO-Revision-Date: 2024-02-26 13:31+0000\n"
+"POT-Creation-Date: 2024-02-26 13:32+0000\n"
+"PO-Revision-Date: 2024-02-26 13:32+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -36,18 +36,18 @@ msgstr ""
 #. module: school_program_approuval
 #: model:ir.model,name:school_program_approuval.model_ir_actions_act_window_view
 msgid "Action Window View"
-msgstr ""
+msgstr "Vue de la fenêtre d'action"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
 msgid "Activate Approuval"
-msgstr ""
+msgstr "Activer"
 
 #. module: school_program_approuval
 #: model:ir.model.fields.selection,name:school_program_approuval.selection__school_program_approuval__state__active
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Active"
-msgstr ""
+msgstr "Actif"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__approuval_id
@@ -58,28 +58,28 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_individual_bloc__approuval_ids
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_valuation_followup__approuval_ids
 msgid "Approuvals"
-msgstr ""
+msgstr "Validations"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
 msgid "Approuve Blocs"
-msgstr ""
+msgstr "Approuver les PAEs"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
 msgid "Approuve Valuations"
-msgstr ""
+msgstr "Approuver les valorisations"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
 msgid "Archive Approuval"
-msgstr ""
+msgstr "Archiver"
 
 #. module: school_program_approuval
 #: model:ir.model.fields.selection,name:school_program_approuval.selection__school_program_approuval__state__archived
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Archived"
-msgstr ""
+msgstr "Archivé"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__bloc_id
@@ -94,12 +94,12 @@ msgstr ""
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__individual_bloc_ids
 msgid "Blocs"
-msgstr ""
+msgstr "PAEs"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__individual_bloc_count
 msgid "Blocs Count"
-msgstr ""
+msgstr "#PAEs"
 
 #. module: school_program_approuval
 #: model_terms:ir.actions.act_window,help:school_program_approuval.action_program_approuval_form
@@ -110,7 +110,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__create_uid
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Créé par"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__create_date
@@ -121,7 +121,7 @@ msgstr ""
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Current Year"
-msgstr ""
+msgstr "Année en cours"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__date
@@ -138,7 +138,7 @@ msgstr ""
 #: model:ir.model.fields.selection,name:school_program_approuval.selection__school_program_approuval__state__draft
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Draft"
-msgstr ""
+msgstr "Brouillon"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__id
@@ -155,7 +155,7 @@ msgstr ""
 #. module: school_program_approuval
 #: model:ir.model,name:school_program_approuval.model_school_individual_bloc
 msgid "Individual Bloc"
-msgstr ""
+msgstr "Bloc individuel"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
@@ -198,7 +198,7 @@ msgstr ""
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Next Year"
-msgstr ""
+msgstr "Année suivante"
 
 #. module: school_program_approuval
 #: model_terms:ir.actions.act_window,help:school_program_approuval.action_program_approuval_form
@@ -209,12 +209,12 @@ msgstr ""
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__participant_ids
 msgid "Particpants"
-msgstr ""
+msgstr "Participants"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Previous Year"
-msgstr ""
+msgstr "Année précédente"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__private_comments
@@ -225,18 +225,18 @@ msgstr ""
 #: model:ir.model.fields.selection,name:school_program_approuval.selection__ir_actions_act_window_view__view_mode__program_approuval
 #: model:ir.model.fields.selection,name:school_program_approuval.selection__ir_ui_view__type__program_approuval
 msgid "Program Approuval"
-msgstr ""
+msgstr "Validation des PAEs"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
 msgid "Program_approuval"
-msgstr ""
+msgstr "Validation des PAEs"
 
 #. module: school_program_approuval
 #: model:ir.actions.act_window,name:school_program_approuval.action_program_approuval_form
 #: model:ir.ui.menu,name:school_program_approuval.menu_program_approuval_tree
 msgid "Program_approuvals"
-msgstr ""
+msgstr "Validation des PAEs"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_bloc_approuval__public_comments
@@ -251,7 +251,7 @@ msgstr ""
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_program_approuval_filter
 msgid "Search Program_approuval"
-msgstr ""
+msgstr "Recherche une validation"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.view_approuve_valuations_filter
@@ -261,12 +261,12 @@ msgstr ""
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__secretary_id
 msgid "Secretary"
-msgstr ""
+msgstr "Secrétaire"
 
 #. module: school_program_approuval
 #: model_terms:ir.ui.view,arch_db:school_program_approuval.program_approuval_form
 msgid "Set to Draft"
-msgstr ""
+msgstr "Remettre en brouillon"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__state
@@ -296,29 +296,29 @@ msgstr ""
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__valuation_followup_ids
 msgid "Valuations"
-msgstr ""
+msgstr "Valorisations"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__valuation_followup_count
 msgid "Valuations Count"
-msgstr ""
+msgstr "# Valorisations"
 
 #. module: school_program_approuval
 #: model:ir.model,name:school_program_approuval.model_ir_ui_view
 msgid "View"
-msgstr ""
+msgstr "Vue"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_ir_actions_act_window_view__view_mode
 #: model:ir.model.fields,field_description:school_program_approuval.field_ir_ui_view__type
 #: model:ir.model.fields,field_description:school_program_approuval.field_website_page__type
 msgid "View Type"
-msgstr ""
+msgstr "Type de Vue"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__year_id
 msgid "Year"
-msgstr ""
+msgstr "Année"
 
 #. module: school_program_approuval
 #: model:ir.model.fields,field_description:school_program_approuval.field_school_program_approuval__year_sequence
