--- a/school_management/i18n/fr_BE.po
+++ b/school_management/i18n/fr_BE.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-11 14:12+0000\n"
-"PO-Revision-Date: 2024-03-11 14:12+0000\n"
+"POT-Creation-Date: 2024-03-12 15:35+0000\n"
+"PO-Revision-Date: 2024-03-12 15:35+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -295,6 +295,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:school_management.view_individual_courses_filter
 msgid "Agregation"
 msgstr "Agrégation"
+
+#. module: school_management
+#: model:ir.model.fields,help:school_management.field_ir_ui_menu__simulated_id
+msgid "Already existing menu that this Home menu must simulate."
+msgstr "Menu déjà existant que le menu d'accueil doit remplacer"
 
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.view_partners_form_school
@@ -593,7 +598,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:school_management.action_teacher_form
 #: model:ir.ui.menu,name:school_management.menu_contacts
 msgid "Contacts"
-msgstr ""
+msgstr "Employés"
 
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.view_partners_form_school
@@ -929,6 +934,11 @@ msgid "Display Name"
 msgstr "Nom affiché"
 
 #. module: school_management
+#: model:ir.model.fields,field_description:school_management.field_ir_ui_menu__display_in_home_menu
+msgid "Displayed in home menu"
+msgstr "Affiché dans le menu d'accueil"
+
+#. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.view_partners_form_school
 msgid "Divers"
 msgstr ""
@@ -1205,6 +1215,13 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:school_management.program_form
 #: model_terms:ir.ui.view,arch_db:school_management.view_partners_form_school
 msgid "Heures :"
+msgstr ""
+
+#. module: school_management
+#. odoo-javascript
+#: code:addons/school_management/static/src/xml/menu.xml:0
+#, python-format
+msgid "Horizon v.3.0"
 msgstr ""
 
 #. module: school_management
@@ -1695,6 +1712,23 @@ msgstr "Numéro de matricule"
 #: model:ir.model,name:school_management.model_custom_partner_fields_memoir_title
 msgid "Memoir Title"
 msgstr "Titre du mémoire"
+
+#. module: school_management
+#: model:ir.model,name:school_management.model_ir_ui_menu
+msgid "Menu"
+msgstr ""
+
+#. module: school_management
+#. odoo-javascript
+#: code:addons/school_management/static/src/xml/menu.xml:0
+#, python-format
+msgid "Menu classique Odoo"
+msgstr ""
+
+#. module: school_management
+#: model:ir.model.fields,help:school_management.field_ir_ui_menu__display_in_home_menu
+msgid "Menu to add in the Horizon Home menu."
+msgstr "Menu à ajouter dans le menu d'accueil Horizon"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_bloc__message_has_error
@@ -2281,6 +2315,13 @@ msgid "Responsible teacher"
 msgstr "Responsable de l'UE"
 
 #. module: school_management
+#. odoo-javascript
+#: code:addons/school_management/static/src/xml/menu.xml:0
+#, python-format
+msgid "Revenir vers le site Web"
+msgstr ""
+
+#. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_course_session__room
 msgid "Room"
 msgstr "Local"
@@ -2399,9 +2440,14 @@ msgid "Signature de la/du secrétaire de la commission des études"
 msgstr ""
 
 #. module: school_management
+#: model:ir.model.fields,field_description:school_management.field_ir_ui_menu__simulated_id
+msgid "Simulated Menu"
+msgstr "Menu simulé"
+
+#. module: school_management
 #: model:ir.model.fields.selection,name:school_management.selection__res_partner__marial_status__s
 msgid "Single"
-msgstr "Célbataire"
+msgstr "Célibataire"
 
 #. module: school_management
 #: model:ir.model.fields,field_description:school_management.field_school_individual_bloc__source_bloc_id
@@ -2840,7 +2886,7 @@ msgstr ""
 #. module: school_management
 #: model:ir.model,name:school_management.model_res_users
 msgid "User"
-msgstr "Utilisateur"
+msgstr ""
 
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.website_program_details_content
